# whdsync-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: credentials.rs  download.rs  local.rs  localfiles.rs  main.rs  remote.rs  remotefiles.rs  whdload.rs
