[package]
name = "whdsnc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
anyhow = "1.0"
suppaftp = "5.3"
zune-inflate={ version="0.2", default-features=false}
crc32fast = "1.4"
bytes = "1.6"
roxmltree = "0.18"
rust-netrc = "0.1"