[package]
name = "whdsync-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
anyhow = "1.0"
suppaftp = "6.1"
zune-inflate = { version = "0.2", default-features = false }
crc32fast = "1.4"
bytes = "1.10"
roxmltree = { version = "0.20", default-features = false, features = ["std"] }
rust-netrc = "0.1"
